Fix disposition of some elements on safari
Safari was bugged because of usage of Intl. library (used to display
localized dates month), added polyfill feature to fix that.

--- a/src/main.scss
+++ b/src/main.scss
@@ -53,13 +53,17 @@ section {
     padding-top: 4em;
 }
 
+.rel {
+    position: relative;
+}
+
 .vert {
     position: relative;
     &--full-height {
         min-height: 100vh;
     }
     &__content {
-        position: relative;
+        position: absolute;
         top: 50%;
         transform: translate(0, -50%);
     }
